# DoTeacher

./: .gitignore  .gitmodules  README.md  photoUpload.py  productUpload.py  wesocket.py
DCcontroller/: README.md  adaptive_motor_control.py  joystick_controller.py  temp_control.py
DoTeacher/: README.md
DoTeacher/app/: build.gradle.kts  google-services.json
DoTeacher/app/src/main/: AndroidManifest.xml
DoTeacher/gradle/: libs.versions.toml
dosunsang_server/dosunsang_server/: .gitignore  Dockerfile  build.gradle  dosunsangdb.sql
doteacher_teleops/: package.xml  setup.cfg  setup.py
doteacher_teleops/doteacher_teleops/: motor_control_node.py
mobile/: productUpload.py
mobile/DoTeacher/: build.gradle.kts  settings.gradle.kts
mobile/DoTeacher/app/: proguard-rules.pro
mobile/DoTeacher/gradle/: libs.versions.toml
mobile/DoTeacher/gradle/wrapper/: gradle-wrapper.properties
mobile/dosunsang_server/dosunsang_server/: .gitignore  Dockerfile  Jenkinsfile  build.gradle  dosunsangdb.sql
ros/Groot2 project/: navi_BT.btproj
ros/camera/: usb_camera.py
ros/custom/custom_slam_toolbox/: package.xml
ros/custom/custom_slam_toolbox/launch/: custom_cyglidar_slam_toolbox_rviz_launch.py
ros/custom/custom_teleop/custom_teleop/: custom_teleop_key.py
ros/dev_ws/: .gitignore
ros/dev_ws/src/detect_picture/: detect_fusion.py  detect_object.py  detect_picture.py  detect_target.py
ros/dev_ws/src/motor_control/: pipe_server.py  steer_throttle_control.py
ros/devel/custom/custom_odom/: package.xml  setup.cfg  setup.py
ros/devel/custom/custom_slam_toolbox/: CMakeLists.txt
ros/devel/custom/custom_teleop/: package.xml  setup.cfg  setup.py
ros/devel/custom/custom_tf2/: package.xml  setup.cfg  setup.py
ros/devel/joystick_control/: joy_node.py  motor_control_node.py
ros/devel/motor/adaptive_motor_control/: adaptive_motor_control.py
ros/devel/motor/mqtt_ros_bridge/: mqtt_bridge_node.py
ros/devel/odometry/: odom.py
ros/devel/ros2_ws/: .gitignore
ros/doteacher/doteacher/: CMakeLists.txt  package.xml
ros/doteacher/doteacher/install/: local_setup.sh  setup.sh
ros/doteacher/doteacher/log/: latest_build
ros/doteacher/doteacher_bringup/: CMakeLists.txt  package.xml
ros/doteacher/doteacher_bringup/config/: map.yaml  nav2_params.yaml
ros/doteacher/doteacher_bringup/launch/: doteacher_bringup.launch.py
ros/doteacher/doteacher_control/: package.xml  setup.cfg  setup.py
ros/doteacher/doteacher_control/doteacher_control/: ackermann_steering_controller.cpp  ackermann_steering_controller.py  motor_control_node.py
ros/doteacher/doteacher_teleops/: setup.py
ros/doteacher/doteacher_teleops/doteacher_teleops/: teleops_joy_node.py
ros/motor/mqtt_ros_bridge/: robot_controller.py
ros/mqtt_ros_bridge/raspberry_pi_5/: rpi_ultrasonic_mqtt.py
ros/ros2_ws/: .gitignore  src
ros/ros2_ws/camera/: get_video.py
ros/ros2_ws/joy_ws/: joy_params.yaml
ros/ros2_ws/src/car_sdc_pkg/: package.xml  setup.cfg  setup.py
ros/ros2_ws/src/custom_rviz/: CMakeLists.txt  package.xml
ros/ros2_ws/src/custom_rviz/launch/: custom_lidar_rviz_launch.py
ros/ros2_ws/src/custom_rviz/src/: custom_rviz_node.cpp
ros/ros2_ws/src/custom_slam/: package.xml  setup.cfg  setup.py
ros/ros2_ws/src/custom_tf/: package.xml  setup.cfg  setup.py
ros/ros2_ws/src/doteacher/: CMakeLists.txt  doteacher.xml  doteacher_ackermann.xml  doteacher_carlike.xml  package.xml
ros/ros2_ws/src/doteacher/bringup/config/: doteacher_controller.yaml
ros/ros2_ws/src/doteacher/bringup/launch/: carlikebot.launch.py  doteacher.launch.py
ros/ros2_ws/src/doteacher/config/: keyboard.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_smac_planner_hybrid.yaml  twist_mux.yaml
ros/ros2_ws/src/doteacher/config/nav2/: global_costmap.yaml  local_costmap.yaml
ros/ros2_ws/src/doteacher/config/ros2_control/: doteacher_controllers.yaml
ros/ros2_ws/src/doteacher/config/rviz/: doteacher.rviz  launch_sim.rviz  main.rviz  view_doteacher.rviz
ros/ros2_ws/src/doteacher/description/gazebo_control/: carlikebot.gazebo_control.xacro  gazebo_ros_ackermann_drive.xacro
ros/ros2_ws/src/doteacher/description/launch/: view_robot.launch.py
ros/ros2_ws/src/doteacher/description/ros2_control/: carlikebot.ros2_control.xacro  doteacher.ros2_control.xacro  ros2_control_ackermann_drive.xacro
ros/ros2_ws/src/doteacher/description/urdf/: carlikebot.urdf.xacro  doteacher.urdf copy.xacro  doteacher.urdf.xacro  doteacher_ackermann.urdf.xacro  doteacher_description.urdf.xacro
ros/ros2_ws/src/doteacher/hardware/: ackermann_jetson.cpp  carlike_jetson.cpp  carlikebot_system.cpp
ros/ros2_ws/src/doteacher/hardware/include/doteacher/: ackermann_jetson.hpp  carlike_jetson.hpp  carlikebot_system.hpp
ros/ros2_ws/src/doteacher/launch/: joystick.launch.py  keyboard.launch.py  launch_doteacher.launch.py  launch_doteacherlaunch.py  launch_robot.launch.py  launch_sim.launch.py  localization_nav2_launch.py  localization_slam_toolbox_launch.py  navigation_launch.py  online_async.launch.py  online_async_launch.py  rsp.launch.py  slam_launch.py
ros/ros2_ws/src/doteacher/maps/: hhas_3f_save.pgm  hhas_3f_save.yaml  hhas_3f_serial.data  my_home2_save.pgm  my_home2_save.yaml  my_home2_serial.data  my_home_save.pgm  my_home_save.yaml  my_home_serial.data  ssafy_3f_map.pgm  ssafy_3f_map.yaml  ssafy_3f_map_serial.data
ros/ros2_ws/src/doteacher/test/: test_carlikebot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
ros/ros2_ws/src/doteacher/worlds/: obstacles.world
ros/ros2_ws/src/doteacher_backend/: package.xml  setup.cfg  setup.py
ros/ros2_ws/src/doteacher_interfaces/: CMakeLists.txt  package.xml
ros/ros2_ws/src/doteacher_interfaces/msg/: SteerThrottle.msg
ros/ros2_ws/src/doteacher_interfaces/srv/: DetectPoseService.srv  DetectedImage.srv  Nav2Index.srv  UploadPicture.srv
ros/ros2_ws/src/usb_cam_pkg/: setup.py  (+2 more)
server/test_server/: build.gradle  settings.gradle
vision/: README.md  basebest.py  yolo_pose.py
voice/: README.md  RPIchatbot.py  RPItext.py  aichatbot.py  main.py  onlytext.py
(+374 files in other folders)
